work in progress

--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="static/imagens/favicon.png" type="image/x-icon">
 <title>Lambeijos</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600 ;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Zen+Antique+Soft&display=swap');
@@ -105,7 +105,7 @@ body, html {
     <h1>LAMBEIJOS</h1>
     
   <div class="login-container">
-    <img src="imagens/fotocookie.png" alt="Logo" class="login-logo">
+    <img src="static\imagens\fotocookie.png" alt="Logo" class="login-logo">
    
     <label for="usuário"><b>Usuário:</b></label>
     <input type="text" placeholder="Digite o usuário" name="uname" required>
