--- a/template/index.html
+++ b/template/index.html
@@ -23,7 +23,7 @@ body, html {
   }
 
   .capa {
-    background-image: url('imagens/walpaperdog.jpg');
+    background-image: url('static/imagens/walpaperdog.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
