--- a/template/pag2Cliente.html
+++ b/template/pag2Cliente.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="" type="image/x-icon">
-    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="static/imagens/favicon.png" type="image/x-icon">
     
     <title>Lambeijos</title>
     <style>
@@ -23,7 +23,7 @@ body, html {
   }
 
   .capa {
-    background-image: url('imagens/walpaperdog.jpg');
+    background-image: url('static/imagens/walpaperdog.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -102,7 +102,7 @@ body, html {
 
         
       <div class="login-container">
-        <img src="imagens/fotocookie.png" alt="Logo" class="login-logo">
+        <img src="static/imagens/fotocookie.png" alt="Logo" class="login-logo">
 
         <div >
             
