--- a/template/Boletim1.html
+++ b/template/Boletim1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="static/imagens/favicon.png" type="image/x-icon">
 <title>Boletim</title>
 <style>
 
@@ -24,7 +24,7 @@ body, html {
   }
   .capa {
     
-    background-image: url('imagens/walpaperdog.jpg'  ) ;
+    background-image: url('static/imagens/walpaperdog.jpg'  ) ;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
