--- a/template/index.html
+++ b/template/index.html
@@ -113,7 +113,7 @@ body, html {
     <label for="senha"><b>Senha:</b></label>
     <input type="password" placeholder="Digite a senha" name="psw" required>
 
-    <button class="botaoEntrar" type="submit"><a href="pag2Cliente.html">Entrar</a></button>
+    <button class="botaoEntrar" type="submit"><a href="/auth">Entrar</a></button>
     <button  class="botaoCadastrar" type="button"><a href="#">Cadastrar</a></button>
   </div>
 </div>
