--- a/template/index.html
+++ b/template/index.html
@@ -107,14 +107,15 @@ body, html {
   <div class="login-container">
     <img src="static\imagens\fotocookie.png" alt="Logo" class="login-logo">
    
-    <label for="usuário"><b>Usuário:</b></label>
-    <input type="text" placeholder="Digite o usuário" name="uname" required>
-
-    <label for="senha"><b>Senha:</b></label>
-    <input type="password" placeholder="Digite a senha" name="psw" required>
-
-    <button class="botaoEntrar" type="submit"><a href="/auth">Entrar</a></button>
-    <button  class="botaoCadastrar" type="button"><a href="#">Cadastrar</a></button>
+    <form method="post" action="/">
+      <label for="usuário"><b>Usuário:</b></label>
+      <input type="text" placeholder="Digite o usuário" name="usuario" required><br><br>
+      
+      <label for="senha"><b>Senha:</b></label>
+      <input type="password" id="senha" name="senha" placeholder="Digite a senha"required><br><br>
+      <!-- Botão de envio -->
+      <button class="botaoEntrar" type="submit"><a href="/auth">Entrar</a></button>
+      <button  class="botaoCadastrar" type="button"><a href="#">Cadastrar</a></button>
   </div>
 </div>
 </body>
